<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Replaced TextViews with TimeBar -->
    <com.google.android.exoplayer2.ui.DefaultTimeBar
        android:id="@+id/exo_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:buffered_color="#757575"
        app:played_color="#FF5722"
        app:scrubber_color="#FF5722"
        app:unplayed_color="#BDBDBD" />

    <LinearLayout
        android:id="@+id/my_player_controller_linear_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/my_player_controller_btn_previous"
            android:layout_width="@dimen/p_btn_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/background_color"
            android:contentDescription="@string/btn_previous"
            android:focusable="true"
            android:screenReaderFocusable="true"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            app:icon="@drawable/exo_icon_previous"
            app:iconTint="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exo_rew"
            android:layout_width="@dimen/p_btn_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/background_color"
            android:contentDescription="Rewind"
            android:focusable="true"
            android:screenReaderFocusable="true"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            app:icon="@drawable/exo_icon_rewind"
            app:iconTint="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/my_player_controller_btn_play_pause"
            android:layout_width="@dimen/p_btn_width"
            android:layout_height="@dimen/button_height"
            android:accessibilityLiveRegion="polite"
            android:backgroundTint="@color/background_color"
            android:contentDescription="@string/btn_play"
            android:focusable="true"
            android:screenReaderFocusable="true"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            app:iconTint="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exo_ffwd"
            android:layout_width="@dimen/p_btn_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/background_color"
            android:contentDescription="Fast Forward"
            android:focusable="true"
            android:screenReaderFocusable="true"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            app:icon="@drawable/exo_icon_fastforward"
            app:iconTint="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/my_player_controller_btn_next"
            android:layout_width="@dimen/p_btn_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/background_color"
            android:contentDescription="@string/btn_next"
            android:focusable="true"
            android:screenReaderFocusable="true"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            app:icon="@drawable/exo_controls_next"
            app:iconTint="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>
